 * Notification emails are now sent per user (Matthew Downey)
 * Added the ability to override the default manager on Page models
 * Added an optional human-friendly `site_name` field to sites (Timo Rieber)
 * Added success message after updating image from the image upload view (Christian Peters)
 * New translations for Arabic and Latvian
 * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 * Fix: Locked pages can no longer be unpublished (Alex Bridge)
 * Fix: Site records now implement `get_by_natural_key`
 * Fix: Creating pages at the root level (and any other instances of the base `Page` model) now properly respects the `parent_page_types` setting
 * Fix: Settings menu now opens correctly from the page editor and styleguide views
 * Fix: `subpage_types` / `parent_page_types` business rules are now enforced when moving pages
 * Fix: Multi-word tags on images and documents are now correctly preserved as a single tag (LKozlowski)
 * Fix: Changed verbose names to start with lower case where necessary (Maris Serzans)
 * Fix: Invalid images no longer crash the image listing (Maris Serzans)
 * Fix: `MenuItem` `url` parameter can now take a lazy URL (Adon Metcalfe, rayrayndwiga)

1.2 (12.11.2015)
~~~~~~~~~~~~~~~~

 * Added `wagtail.contrib.settings`, a module to allow administrators to edit site-specific settings
 * Core templatetags (pageurl, image, wagtailuserbar, etc) are now compatible with Jinja2
 * Redirects can now be created for specific sites
 * The Page.get_latest_revision_as_page method now returns the live page object if there are no draft changes to the page
 * Image and document models now provide a `search` method on their QuerySets
 * Search methods now accept an `operator` argument to determine whether multiple terms are ORed or ANDed together
 * Search methods now accept an `order_by_relevance` argument, which can be set to False to preserve the original QuerySet ordering